# polygon_designer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_sln.bat  proj.txt
src/libraries/polygon_designer_lib/: CMakeLists.txt  defines.h  designer.cpp  designer.h  figure.h  polygon.cpp  polygon.h  renderer.cpp  renderer.h  rendering_strategy.cpp  rendering_strategy.h  utils.cpp  utils.h  validator.cpp  validator.h
src/polygon_designer_app/: CMakeLists.txt  drawing_area.cpp  drawing_area.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/unittests/: CMakeLists.txt  designer_tests.cpp  main.cpp  polygon_tests.cpp  polygon_utils_tests.cpp  utils_tests.cpp  validator_tests.cpp
